--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "gulp-nodemon": "2.4.2",
     "gulp-plumber": "1.2.1",
     "gulp-typescript": "6.0.0-alpha.1",
+    "http": "0.0.0",
     "jest": "25.1.0",
+    "nock": "11.8.2",
     "prettier": "1.19.1",
     "sinon": "8.1.1",
     "ts-jest": "25.2.0",
